--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ humantime = "^2.1"
 rand_distr = "0.4.3"
 #sampling = "0.1.1"
 bincode = "1.3.3"
+
+[features]
+# Defines a feature named `webp` that does not enable any other features.
+ldprint = []
