--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sir_lock"
-version = "0.2.8"
+version = "0.2.9-alpha"
 edition = "2021"
 #trying out many patient zero
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
